# app

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.development  Dockerfile.private  Dockerfile.public  README.md  package-lock.json  package.json  server.js
.github/workflows/: build-and-push.yml
certificate/: cert.conf  server-ca-cert.pem  server-cert.pem  server-key.pem
src/: actions-runner.service  lib.rs  runner.sh  setup.sh  sfu.env
src/p2p-example/: README.md  aircraft-example.sh  raspi-4b.sh  ubuntu24.sh
src/server/: mod.rs
src/wifi-example/: README.md  aircraft-managed-example.sh  aircraft-p2p-client-example.sh  ground-station-ap-example.sh  ground-station-p2p-go-example.sh  ground-station.sh
