[package]
name = "fpvjp-app"
version = "0.1.0"
edition = "2021"
authors = ["FPV Japan <fpv@fpv.jp>"]
license = "MPL-2.0"
description = "FPV JP signalling server with static file serving"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
thiserror = "2"
nanoid = "0.4"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
percent-encoding = "2"

[[bin]]
name = "fpvjp-app"
path = "src/bin/server.rs"
